# assets_manager

./: .env.example  .gitignore  CONTRACT.md  README.md  build-release.bat  build-worker.bat  fix_brightness.py  index.html  package.json  pnpm-lock.yaml  run.bat  vite.config.ts
.github/workflows/: build-wheels.yml  release.yml
app/: config.py  jobs.py  main.py  models.py  routes.py  store.py
app/pipeline/: export_obj.py  hunyuan_client.py  mesh.py  multiview.py  server_manager.py
hunyuan_overlay/: README.md
hunyuan_overlay/mv2/: gradio_app.py
legacy/: requirements.txt
scripts/: build-extension-wheels.ps1  fetch-uv.ps1  patch-installer-wheels.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_jobs.rs  commands.rs  config.rs  elevenlabs.rs  error.rs  events.rs  installer.rs  jobs.rs  lib.rs  main.rs  openai.rs  openai_admin.rs  openai_text.rs  proc.rs  store.rs  supervisor.rs  types.rs  worker.rs
src/components/: ActivityBanner.tsx  ActivityRail.tsx  AppShell.tsx  AppSidebar.tsx  AssetDetail.tsx  Assets3dSidebar.tsx  Assets3dWorkspace.tsx  AudioItemDetail.tsx  AudioPlayer.tsx  AudioSidebar.tsx  AudioWorkspace.tsx  CompareViewer3D.tsx  DeriveAssetDialog.tsx  Gen3dPanel.tsx  GenerationQueue.tsx  Header.tsx  HunyuanInstaller.tsx  ImageEditDialog.tsx  LazyViewer3D.tsx  LinkedAudioSection.tsx  Modal.tsx  MultiviewGallery.tsx  NewAssetForm.tsx  Sidebar.tsx  (+16 more)
web/: app.js  index.html  styles.css
worker/: __init__.py  main.py  paint_mesh.py  requirements.txt  serve.py  stages.py  worker.spec
(+26 files in other folders)
