[package]
name = "assets-gen"
version = "0.3.0"
description = "assets_gen — pipeline GPT-image -> Hunyuan3D -> OBJ"
authors = ["assets_gen"]
edition = "2021"

[lib]
name = "assets_gen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
deunicode = "1"
image = "0.25"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1"
tauri-plugin-store = "2.4.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
